tests/error/func_non.gw
// [contains] function call using a non-function value
 NULL();
